--- a/Vignettes/Baruwal_R_Package_Tutorial.Rmd
+++ b/Vignettes/Baruwal_R_Package_Tutorial.Rmd
@@ -77,7 +77,7 @@ for(i in 1:20){
   simulated[i] <- c(trees[[i]]$root.edge)
 }
 emperical_data <- ants$origin_time
-mean <- mean(emperical_data)
+meane <- mean(emperical_data)
 means <- mean(simulated)
 ```
 
@@ -100,7 +100,7 @@ Compare the simulated data with emperical data
 
 Create a dataframe to store all your datas
 ```{r}
-datas <- data.frame(simulated, emperical_data, mean, means)
+datas <- data.frame(simulated, emperical_data, meane, means)
 ```
 
 #Using function comparision
