--- a/vignettes/Baruwal_R_Package_Tutorial.Rmd
+++ b/vignettes/Baruwal_R_Package_Tutorial.Rmd
@@ -9,7 +9,8 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Installation
+## Data Simulation
+This tutorial uses the function from package FossilSim to simulate datasets from posterior distribution. We quantify some characteristics of both the simulated and emperical(origin time) datasets using test statistics, here, mean and standard deviation. The goal is to check the model accuracy. 
 
 Load in common library 
 ```{r}
